<resources>
    <string name="app_name">Pocket Guide</string>
    <string name="image_fetching">Image Fetching</string>
    <string name="elguide">elGuide:</string>
    <string name="scan_to_save_to_database">Scan to save to database</string>
    <string name="scan_a_barcode">Scan a barcode...</string>
    <string name="use_camera">Use Camera</string>
    <string name="product_image">Product Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_select">Country Select</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
